--- a/index-dark.html
+++ b/index-dark.html
@@ -108,7 +108,7 @@
             style="background: linear-gradient(rgba(0, 0, 0, .6), rgba(0, 0, 0, .6)), url('court-back.jpg'); background-size:cover;">
             <div class="center container">
                 <img class="center" vspace="0px" src="assets/images/Misfits Dark-trans.png"
-                    style="max-width:1000px; max-height:1000px; width: 40vw">
+                    style="max-width:1000px; max-height:1000px; width: 25vw">
                 <h3 class="xxl-font-size font-weight__500 text-misfit-blue" text-align="center">BASKETBALL CLUB</h3>
                 <h3 class="base-font-size font-weight__500 text-misfit-blue" text-align="center" margin-bottom="0">
                     Regina, SK</h3>
@@ -178,7 +178,7 @@
             <div class="container">
                 <div class="row no-gutters">
                     <div class="col-12">
-                        <div class="box box-shadow border border-color-pink p-5">
+                        <div class="box-dark box-shadow border border-color-pink p-5">
                             <div class="row align-items-center">
                                 <div class="col-12 col-lg-12 mr-lg-auto">
                                     <div class="text-center text-lg-left">
@@ -212,7 +212,7 @@
 
         <!-- Features -->
         <section class="feature section-no-pad bg-black"
-            style="background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url('court-back.jpg'); background-size:cover;">
+            style="background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url('court-back.jpg'); background-size:cover;">
             <div class="container">
                 <div class="row no-gutters">
                     <div class="col-12">
@@ -226,7 +226,7 @@
                                     <!-- Empty Space -->
                                     <div class="sm-space"></div>
                                     <!--/ End Empty Space -->
-                                    <p class="base-plus-font-size text-justify">
+                                    <p class="base-plus-font-size text-justify text-facebook-dark2">
                                         In 2019, the Regina Misfits youth basketball club was started by local
                                         basketball superstars and former University of Regina Women Cougar’s Bree
                                         Burgess and Leah Levy, as well as local teacher and Basketball Saskatchewan Inc.
@@ -234,7 +234,7 @@
                                         of knowledge and skills to the Misfits organization. Today, we are the largest
                                         female youth basketball club in Saskatchewan!
                                     </p>
-                                    <p class="base-plus-font-size text-justify">
+                                    <p class="base-plus-font-size text-justify text-facebook-dark2">
                                         Our Misfits basketball club currently supports player development between grades
                                         four to nine. Our goal is to empower and support female youths as they grow and
                                         develop their skills.
@@ -258,7 +258,7 @@
                     <div class="col-12">
                         <div class="row align-items-center">
                             <div class="col-12 col-lg-8 mx-lg-auto order-lg-2">
-                                <div class="p-lg-12 text-center text-lg-left text-misfit-blue">
+                                <div class="p-lg-12 text-center text-lg-left text-facebook-dark1">
                                     <h3 class="text-primary base-font-size"></h3>
                                     <h2 class="xl-font-size font-weight__400 ">
                                         Abuse-Free Sport
@@ -266,7 +266,7 @@
                                     <!-- Empty Space -->
                                     <div class="sm-space"></div>
                                     <!--/ End Empty Space -->
-                                    <p class="base-font-size text-justify text-misfit-pink">
+                                    <p class="base-font-size text-justify text-facebook-dark2">
                                         Misfits are committed to ensuring sport is fun and safe and promote the
                                         Abuse-Free Sport Helpline. The Helpline is a listening and referral service that
                                         aims to encourage people to speak openly and to validate their concerns
@@ -340,13 +340,13 @@
                             <div class="col-12 col-lg-8 mx-lg-auto order-lg-2">
                                 <div class="p-lg-12 text-center text-lg-left">
                                     <h3 class="text-primary base-font-size"></h3>
-                                    <h2 class="xl-font-size font-weight__400 text-misfit-blue">
+                                    <h2 class="xl-font-size font-weight__400 text-facebook-dark1">
                                         Funding
                                     </h2>
                                     <!-- Empty Space -->
                                     <div class="sm-space"></div>
                                     <!--/ End Empty Space -->
-                                    <p class="base-font-size text-justify text-misfit-pink">
+                                    <p class="base-font-size text-justify text-facebook-dark2">
                                         Sometimes, families need financial assistance to get their kids into a sport or
                                         physical activity. We're committed to helping all families access sport through
                                         promoting the Jumpstart program.
