--- a/index-dark2.html
+++ b/index-dark2.html
@@ -108,7 +108,7 @@
             style="background: linear-gradient(rgba(0, 0, 0, .6), rgba(0, 0, 0, .6)), url('court-back.jpg'); background-size:cover;">
             <div class="center container">
                 <img class="center" vspace="0px" src="assets/images/Misfits Dark-trans.png"
-                    style="max-width:1000px; max-height:1000px; width: 40vw">
+                    style="max-width:1000px; max-height:1000px; width: 25vw">
                 <h3 class="xxl-font-size font-weight__500 text-misfit-blue" text-align="center">BASKETBALL CLUB</h3>
                 <h3 class="base-font-size font-weight__500 text-misfit-blue" text-align="center" margin-bottom="0">
                     Regina, SK</h3>
@@ -178,7 +178,7 @@
             <div class="container">
                 <div class="row no-gutters">
                     <div class="col-12">
-                        <div class="box box-shadow border border-color-pink p-5">
+                        <div class="box-dark box-shadow border border-color-pink p-5">
                             <div class="row align-items-center">
                                 <div class="col-12 col-lg-12 mr-lg-auto">
                                     <div class="text-center text-lg-left">
