--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             style="background: linear-gradient(rgba(0, 0, 0, .6), rgba(0, 0, 0, .6)), url('court-back.jpg'); background-size:cover;">
             <div class="center container">
                 <img class="center" vspace="0px" src="assets/images/Misfits Dark-trans.png"
-                    style="max-width:1000px; max-height:1000px; width: 40vw">
+                    style="max-width:1000px; max-height:1000px; width: 25vw">
                 <h3 class="xxl-font-size font-weight__500 text-misfit-blue" text-align="center">BASKETBALL CLUB</h3>
                 <h3 class="base-font-size font-weight__500 text-misfit-blue" text-align="center" margin-bottom="0">
                     Regina, SK</h3>
@@ -134,6 +134,7 @@
                                 <p class="h4 font-weight__550">Compete</p>
                             </div>
                         </div>
+                        <!--
                         <div class="center container">
                         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="max-width:200px height=100%" >
                             <ol class="carousel-indicators">
@@ -161,7 +162,7 @@
                                 <span class="sr-only">Next</span>
                             </a>
                         </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -175,7 +176,7 @@
             <div class="container">
                 <div class="row no-gutters">
                     <div class="col-12">
-                        <div class="box box-shadow border border-color-light-gray p-5">
+                        <div class="box-light box-shadow border border-color-light-gray p-5">
                             <div class="row align-items-center">
                                 <div class="col-12 col-lg-12 mr-lg-auto">
                                     <div class="text-center text-lg-left">
