--- a/sponsor.html
+++ b/sponsor.html
@@ -63,18 +63,18 @@
 
 <body class="text-body base-font-size font-weight__300">
     <div class="wrapper mx-auto h-100">
-        <div class="cover bg-primary section-bg">
+        <div class="cover bg-dark-gray section-bg">
             <!-- Header -->
             <header class="header py-3">
                 <div class="header-inner">
-                    <!-- Navbar6-->
-                    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+                     <!-- Navbar6-->
+                     <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
                         <div class="container">
                             <div class="d-flex flex-grow-1">
                                 <span
                                     class="w-100 d-lg-none d-block"><!-- hidden spacer to center brand on mobile --></span>
                                 <a class="navbar-brand logo" href="index.html">
-                                    <img src="assets/images/Misfit M.jpg" class="logo-img" alt="logo"></a>
+                                    <img src="assets/images/Misfit M-trans.png" class="logo-img" alt="logo"></a>
                                 <div class="w-100 text-right">
                                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                                         data-target="#myNavbar">
@@ -107,15 +107,15 @@
         </div>
 
         <!-- CTA -->
-        <section class="CTA section bg-white section-bg">
+        <section class="CTA section bg-dark-gray section-bg">
             <div class="container">
                 <div class="row no-gutters">
                     <div class="col-12">
-                        <div class="box box-shadow border border-color-light-gray p-5">
+                        <div class="box-dark box-shadow border border-color-pink p-5 bg-black">
                             <div class="row align-items-center">
                                 <div class="col-12 col-lg-12 mr-lg-auto">
-                                    <div class="text-center text-lg-left">
-                                        <h2 class="xxl-font-size font-weight__400 text-black">
+                                    <div class="text-center text-lg-left text-facebook-dark2">
+                                        <h2 class="xxl-font-size font-weight__400 text-misfit-blue">
                                             Sponsor the Misfits
                                         </h2>
                                         <!-- Empty Space -->
@@ -153,7 +153,7 @@
 
 
         <!-- How It Works -->
-        <section id="how-works" class="section how-works">
+        <section id="how-works" class="section how-works bg-dark-gray text-facebook-dark2">
             <div class="container">
 
                 <div class="row no-gutters">
@@ -163,13 +163,13 @@
                                 <div class="section-title text-left">
 
 
-                                    <h2 class="xxl-font-size font-weight__400 text-black">
+                                    <h2 class="xxl-font-size font-weight__400 text-misfit-blue">
                                         Program Sponsorships
                                     </h2>
                                     <p class="base-plus-font-size text-justify">
                                         In return for their support, Program Sponsors will receive the following:
                                     </p>
-                                    <h2 class="xl-font-size font-weight__500 text-black">
+                                    <h2 class="xl-font-size font-weight__500 ">
                                         $1000+ PLATINUM SPONSORS:
                                     </h2>
                                     <ul>
@@ -184,7 +184,7 @@
                                             Players</li>
                                         <li>Team patronage of sponsor’s business
                                     </ul>
-                                    <h2 class="xl-font-size font-weight__500 text-black">
+                                    <h2 class="xl-font-size font-weight__500 ">
                                         $750 GOLD SPONSORS:
                                     </h2>
                                     <ul>
@@ -198,7 +198,7 @@
                                             Players</li>
                                         <li>Team patronage of sponsor’s business
                                     </ul>
-                                    <h2 class="xl-font-size font-weight__500 text-black">
+                                    <h2 class="xl-font-size font-weight__500 ">
                                         $500 SILVER SPONSORS:
                                     </h2>
                                     <ul>
@@ -224,7 +224,7 @@
             </div>
         </section>
 
-        <section id="how-works" class="section how-works bg-light">
+        <section id="how-works" class="section how-works bg-dark-gray text-facebook-dark2">
             <div class="container">
 
                 <div class="row no-gutters">
@@ -232,7 +232,7 @@
                         <div class="row">
                             <div class="col-12 mx-auto">
                                 <div class="section-title text-left">
-                                    <h2 class="xxl-font-size font-weight__400 text-black">
+                                    <h2 class="xxl-font-size font-weight__400 text-misfit-blue">
                                         Policy for Misfits Basketball Sponsorships
                                     </h2>
                                     <p class="base-plus-font-size text-justify">
@@ -274,66 +274,65 @@
 
 
 
-        <!-- Footer -->
+         <!-- Footer -->
 
-        <a id="footer"></a>
-        <!-- Empty Space -->
-        <div class="sm-space"></div>
-        <!--/ End Empty Space -->
+         <a id="footer"></a>
 
-        <footer class="footer py-5 bg-white">
-            <div class="container">
-                <div class="row no-gutters">
-                    <div class="col-12">
-                        <div class="border-top border-color-light-gray"></div>
-                        <div class="row align-items-center">
-                            <div class="col-12 col-lg-12 mx-lg-auto order-lg-2">
-                                <div class="row">
-                                    <div class="col-12 col-lg-8">
-                                        <div class="text-center text-lg-left" style="padding: 100px 0px 100px 0px;">
-                                            <h2 class="lg-font-size font-weight__400 text-black">
-                                                Contact Us
-                                            </h2>
-                                            <p class="base-plus-font-size text-justify">
-                                                Feel free to contact us with any questions
-                                            </p>
-                                            <div>
-                                                <p class="base-plus-font-size text-justify font-weight__500">
-                                                    Email:
-                                                    <b>misfits22<!-- Comj#dfkjgdfment -->@g<!-- Com -->ma<!--sdfdsf@## Comment -->il.com
-                                                    </b>
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div
-                                        class="col-12 mx-auto col-lg-4 d-flex align-items-center justify-content-end img-fluid">
-                                        <img src="assets/images/Misfits Dark.png" class="img-fluid"
-                                            display="inline-block" vertical-align="middle" alt="footer logo"
-                                            height="75%" width="50%" object-fit="contain">
-                                    </div>
-                                </div>
-                                <div class="border-top border-color-light-gray"></div>
-                                <!-- Empty Space -->
-                                <div class="sm-space"></div>
-                                <!--/ End Empty Space -->
-                                <div class="row">
-                                    <div class="col-12">
-                                        <div class="xs-font-size text-center text-dark-gray"></div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="copyright xs-font-size text-center text-dark-gray">
-                                            © 2023. All Rights Reserved.
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!--/ End Footer -->
+
+         <footer class="footer py-5 bg-black">
+             <div class="container">
+                 <div class="row no-gutters">
+                     <div class="col-12">
+                         <div class="border-top border-color-pink"></div>
+                         <div class="row align-items-center">
+                             <div class="col-12 col-lg-12 mx-lg-auto order-lg-2">
+                                 <div class="row">
+                                     <div class="col-12 col-lg-8">
+                                         <div class="text-center text-lg-left" style="padding: 100px 0px 100px 0px;">
+                                             <h2 class="xl-font-size font-weight__400 text-misfit-blue">
+                                                 Contact Us
+                                             </h2>
+                                             <p class="base-plus-font-size text-justify text-facebook-dark2">
+                                                 Feel free to contact us with any questions
+                                             </p>
+                                             <div>
+                                                 <p
+                                                     class="base-plus-font-size text-justify font-weight__500 text-facebook-dark2">
+                                                     Email:
+                                                     <b>misfitsclub22<!-- Comj#dfkjgdfment -->@g<!-- Com -->ma<!--sdfdsf@## Comment -->il.com
+                                                     </b>
+                                                 </p>
+                                             </div>
+                                         </div>
+                                     </div>
+                                     <div
+                                         class="col-12 mx-auto col-lg-4 d-flex align-items-center justify-content-end img-fluid">
+                                         <img src="assets/images/Misfits Dark-trans.png" class="img-fluid"
+                                             display="inline-block" vertical-align="middle" alt="footer logo"
+                                             height="75%" width="50%" object-fit="contain">
+                                     </div>
+                                 </div>
+                                 <div class="border-top border-color-pink"></div>
+                                 <!-- Empty Space -->
+                                 <div class="sm-space"></div>
+                                 <!--/ End Empty Space -->
+                                 <div class="row">
+                                     <div class="col-12">
+                                         <div class="xs-font-size text-center text-dark-gray"></div>
+                                     </div>
+                                     <div class="col-12">
+                                         <div class="copyright xs-font-size text-center text-misfit-blue">
+                                             © 2023. All Rights Reserved.
+                                         </div>
+                                     </div>
+                                 </div>
+                             </div>
+                         </div>
+                     </div>
+                 </div>
+             </div>
+         </footer>
+         <!--/ End Footer -->
     </div>
 
     <!-- jQuery Script -->
