--- a/index.html
+++ b/index.html
@@ -120,24 +120,25 @@
             <div class="row no-gutters">
                 <div class="col-12 mx-auto">
                     <div class="row">
-                        <div class="col-3 mx-auto">
+                        <div class="col-0 mx-auto">
                             <div class="section-title text-center">
 
                             </div>
                         </div>
 
-                        <div class="col-3 mx-auto">
-                            <div class="section-title text-center">
+                        <div class="col-6 mx-auto">
+                            <div class="section-title text-right">
                                 <h2 class="h6 font-weight__500 text-misfit-blue">
                                     WHAT WE BELEIVE IN
                                 </h2>
                                 <!-- Empty Space -->
                                 <div class="sm-space "></div>
                                 <!--/ End Empty Space -->
-                                <p class="h4 font-weight__550 text-misfit-pink">Work Hard</p>
-                                <p class="h4 font-weight__550 text-misfit-pink">Have Fun</p>
-                                <p class="h4 font-weight__550 text-misfit-pink">Support Each Other</p>
                                 <p class="h4 font-weight__550 text-misfit-pink">Compete</p>
+                                <p class="h4 font-weight__550 text-misfit-pink">Have Fun</p>
+                                <p class="h4 font-weight__550 text-misfit-pink">Work Hard</p>
+                                <p class="h4 font-weight__550 text-misfit-pink">Support Each Other</p>
+                                
                             </div>
                         </div>
 
@@ -279,7 +280,7 @@
                     <div class="col-12">
                         <div class="row align-items-center">
                             <div class="col-12 col-lg-9 mx-lg-auto">
-                                <div class="p-lg-10 text-center text-lg-left">
+                                <div class="p-lg-10 text-left text-lg-left">
                                     <h3 class="text-primary base-font-size"></h3>
                                     <h2 class="xl-font-size font-weight__400 text-misfit-blue">
                                         Canada Basketball Verified
@@ -298,17 +299,12 @@
                                         providing the best athlete experience possible for all participants. This
                                         includes:
                                     </p>
-                                    <ul class="text-facebook-dark2">
-                                        <li>Requiring all coaches to undergo background checks and Safe Sport Training
-                                        </li>
-                                        <li>Following a comprehensive set of policies that help protect the safety of
-                                            all participants</li>
-                                        <li>Aligning with Canada Basketball’s model for Long Term Development, which
-                                            ensures age and developmentally appropriate training</li>
-                                        <li>Having proper administrative procedures in place to govern our organization
-                                        </li>
+                                    <ul class="text-facebook-dark2 text-align-left">
+                                        <li>Requiring all coaches to undergo background checks and Safe Sport Training</li>
+                                        <li>Following a comprehensive set of policies that help protect the safety of all participants</li>
+                                        <li>Aligning with Canada Basketball’s model for Long Term Development, which ensures age and developmentally appropriate training</li>
+                                        <li>Having proper administrative procedures in place to govern our organization</li>
                                     </ul>
-
                                 </div>
                             </div>
                             <div height=200px class="col-12 col-lg-3">
