--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Misfits Basketball</title>
-    <meta name="description"
-        content="Alalia free bootstrap template is a chrome add-on or extention app theme for startups. Made by Themes for app">
-    <meta name="keywords" content="chrome extention theme, chrome theme, chrome add-on theme, free bootstrap theme">
+    <meta name="description" content="Misfits basketball club is a youth sports basketball club located in Regina Saskaskatchewan">
+    <meta name="keywords" content="Regina, youth, basketball, club">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,7 +21,7 @@
 
     <!-- Facebook Open Graph -->
     <meta property="og:title" content="Misfits Basketball Club Regina Saskatchewan" />
-    <meta property="og:image" content="assets/images/alalia-preview.png" />
+    <meta property="og:image" content="assets/images/misfit m.jpg" />
     <meta property="og:site_name" content="Misfits Basketball Club" />
     <meta property="og:description"
         content="Misfits Basketball Club Regina " />
@@ -30,9 +29,9 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="https://themesfor.app/themes/alalia">
-    <meta name="twitter:title" content="Alalia free bootstrap theme by themes for app">
+    <meta name="twitter:title" content="Misfits basketball club is a youth sports basketball club located in Regina Saskaskatchewan">
     <meta name="twitter:description"
-        content="Alalia free bootstrap template is a chrome add-on or extention app theme for startups. Made by Themes for app">
+        content="Misfits basketball club is a youth sports basketball club located in Regina Saskaskatchewan">
     <meta name="twitter:image" content="assets/images/alalia-preview.png">
 
     <!-- Google Fonts -->
@@ -91,7 +90,7 @@
                                         <a href="policies.html" class="nav-link m-2 menu-item">Policies</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#footer" class="nav-link m-2 menu-item">Contact</a>
+                                        <a href="contact.html" class="nav-link m-2 menu-item">Contact</a>
                                     </li>
                                 </ul>
                             </div>
@@ -212,10 +211,10 @@
                                             development, look no further. Check out our Sponsorship page for more
                                             information on how you can support youth basketball.
                                         </p>
-                                        <div class="text-center text-lg-center">
+                                        <!-- <div class="text-center text-lg-center">
                                             <img src="assets/images/yourlogo.jpg"
                                                 style="text-align:center; max-width:250px; max-height:250px; width: 80vw">
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
@@ -226,7 +225,7 @@
         </section>
         <!--/ End CTA -->
 
-        <section class="parallax2"></section>
+         <!-- <section class="parallax2"></section> -->
 
 
 
@@ -248,7 +247,7 @@
                                     <!-- Empty Space -->
                                     <div class="sm-space"></div>
                                     <!--/ End Empty Space -->
-                                    <p class="base-font-size text-justify text-facebook-dark2">
+                                    <p class="base-font-size text-facebook-dark2">
                                         In 2019, the Regina Misfits youth basketball club was started by local
                                         basketball superstars and former University of Regina Women Cougar’s Bree
                                         Burgess and Leah Levy, as well as local teacher and Basketball Saskatchewan Inc.
@@ -256,7 +255,7 @@
                                         of knowledge and skills to the Misfits organization. Today, we are the largest
                                         female youth basketball club in Saskatchewan!
                                     </p>
-                                    <p class="base-font-size text-justify text-facebook-dark2">
+                                    <p class="base-font-size text-facebook-dark2">
                                         Our Misfits basketball club currently supports player development between grades
                                         four to nine. Our goal is to empower and support female youths as they grow and
                                         develop their skills.
@@ -271,7 +270,7 @@
         </section>
         <!--/ End Features -->
 
-        <section class="parallax2"></section>
+        <!-- <section class="parallax2"></section> -->
 
         <!-- Features -->
         <section class="feature section bg-card-dark">
@@ -288,13 +287,13 @@
                                     <!-- Empty Space -->
                                     <div class="sm-space"></div>
                                     <!--/ End Empty Space -->
-                                    <p class="base-font-size text-justify text-facebook-dark2">
+                                    <p class="base-font-size text-facebook-dark2">
                                         We are thrilled to announce that Misfits are the first club team in Regina to be
                                         Canada Basketball Verified. This means that we have met the high standards of
                                         coaching, Safe Sport, and organizational leadership set by our governing bodies.
                                         The Verified logo shows that we care about creating a positive, safe, and developmentally appropriate environment for everyone.
                                     </p>
-                                    <p class="base-font-size text-justify text-facebook-dark2">
+                                    <p class="base-font-size text-facebook-dark2">
                                         As a Verified group, we join other groups across Canada who are committed to
                                         providing the best athlete experience possible for all participants. This
                                         includes:
@@ -337,7 +336,7 @@
                                     <!-- Empty Space -->
                                     <div class="sm-space"></div>
                                     <!--/ End Empty Space -->
-                                    <p class="base-font-size text-justify text-facebook-dark2">
+                                    <p class="base-font-size text-facebook-dark2">
                                         Misfits are committed to ensuring sport is fun and safe and promote the
                                         Abuse-Free Sport Helpline. The Helpline is a listening and referral service that
                                         aims to encourage people to speak openly and to validate their concerns
@@ -375,19 +374,19 @@
                                     <!-- Empty Space -->
                                     <div class="sm-space"></div>
                                     <!--/ End Empty Space -->
-                                    <p class="base-font-size text-justify text-facebook-dark2">
+                                    <p class="base-font-size  text-facebook-dark2">
                                         Established by the Coaching Association of Canada and the Canadian Centre for
                                         Ethics in Sport, the Misfits coaches support the Responsible Coaching Movement
                                         which invites all coaches and sport organizations to learn and apply consistent
                                         safety principles. It includes three distinct pillars, each serving to create a
                                         sport environment that is Safe, Smart, and Secure.
                                     </p>
-                                    <p class="base-font-size text-justify text-facebook-dark2">
-                                        All Misfits coaches have been screened, follow the rule of two, and have taken
+                                    <p class="base-font-size  text-facebook-dark2">
+                                        All Misfits coaches have been screened, follow the <a style="color:#38CBD6"href="assets/images/RuleOfTwo.pdf">rule of two</a>, and have taken
                                         training so our coaches have the confidence and skills needed to effectively
                                         manage challenging situations.
                                     </p>
-                                </div>
+                                    </div>
                             </div>
                             <div height=200px class="col-12 col-lg-3">
                                 <div class="text-center">
@@ -421,7 +420,7 @@
                                     <!-- Empty Space -->
                                     <div class="sm-space"></div>
                                     <!--/ End Empty Space -->
-                                    <p class="base-font-size text-justify text-facebook-dark2">
+                                    <p class="base-font-size text-facebook-dark2">
                                         Sometimes, families need financial assistance to get their kids into a sport or
                                         physical activity. We're committed to helping all families access sport through
                                         promoting the Jumpstart program.
@@ -461,12 +460,12 @@
                                             <h2 class="xl-font-size font-weight__400 text-misfit-blue">
                                                 Contact Us
                                             </h2>
-                                            <p class="base-plus-font-size text-justify text-facebook-dark2">
+                                            <p class="base-plus-font-size  text-facebook-dark2">
                                                 Feel free to contact us with any questions
                                             </p>
                                             <div>
                                                 <p
-                                                    class="base-plus-font-size text-justify font-weight__500 text-facebook-dark2">
+                                                    class="base-plus-font-size  font-weight__500 text-facebook-dark2">
                                                     Email:
                                                     <b>misfitsclub22<!-- Comj#dfkjgdfment -->@g<!-- Com -->ma<!--sdfdsf@## Comment -->il.com
                                                     </b>
