--- a/sponsor.html
+++ b/sponsor.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Misfits Basketball</title>
-    <meta name="description"
-        content="Alalia free bootstrap template is a chrome add-on or extention app theme for startups. Made by Themes for app">
-    <meta name="keywords" content="chrome extention theme, chrome theme, chrome add-on theme, free bootstrap theme">
+    <meta name="description" content="Misfits basketball club is a youth sports basketball club located in Regina Saskaskatchewan">
+    <meta name="keywords" content="Regina, youth, basketball, club">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,18 +20,18 @@
     <![endif]-->
 
     <!-- Facebook Open Graph -->
-    <meta property="og:title" content="Alalia free bootstrap theme by themes for app" />
-    <meta property="og:image" content="assets/images/alalia-preview.png" />
-    <meta property="og:site_name" content="Themes For App" />
+    <meta property="og:title" content="Misfits Basketball Club Regina Saskatchewan" />
+    <meta property="og:image" content="assets/images/misfit m.jpg" />
+    <meta property="og:site_name" content="Misfits Basketball Club" />
     <meta property="og:description"
-        content="Alalia free bootstrap template is a chrome add-on or extention app theme for startups. Made by Themes for app" />
+        content="Misfits Basketball Club Regina " />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="https://themesfor.app/themes/alalia">
-    <meta name="twitter:title" content="Alalia free bootstrap theme by themes for app">
+    <meta name="twitter:title" content="Misfits basketball club is a youth sports basketball club located in Regina Saskaskatchewan">
     <meta name="twitter:description"
-        content="Alalia free bootstrap template is a chrome add-on or extention app theme for startups. Made by Themes for app">
+        content="Misfits basketball club is a youth sports basketball club located in Regina Saskaskatchewan">
     <meta name="twitter:image" content="assets/images/alalia-preview.png">
 
     <!-- Google Fonts -->
@@ -91,7 +90,7 @@
                                         <a href="policies.html" class="nav-link m-2 menu-item">Policies</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#footer" class="nav-link m-2 menu-item">Contact</a>
+                                        <a href="contact.html" class="nav-link m-2 menu-item">Contact</a>
                                     </li>
                                 </ul>
                             </div>
@@ -121,22 +120,22 @@
                                         <!-- Empty Space -->
                                         <div class="pt-1"></div>
                                         <!--/ End Empty Space -->
-                                        <p class="base-font-size text-justify">
+                                        <p class="base-font-size">
                                             We need your help to support our young basketball players. The Misfits
                                             Basketball Club is a volunteer-run program that helps kids develop their
                                             skills and passion for the sport. But we can't do it alone. We rely on fees,
                                             fundraisers, and donations to cover our costs.
-                                        <p class="base-font-size text-justify">
+                                        <p class="base-font-size">
                                             Your sponsorship will make a big difference for our players. It will help
                                             them afford equipment, uniforms, court rentals, insurance, travel, and
                                             tournament fees. These expenses add up to more than $500 per player per
                                             year, which is hard for many families to pay.
-                                        <p class="base-font-size text-justify">
+                                        <p class="base-font-size">
                                             As a thank you for your generosity, we will give you a Team Sponsor Plaque
                                             with a team photo that you can display in your office. This will show your
                                             customers and community that you care about youth sports. You can also
                                             donate gift cards or other items for our raffle baskets.
-                                        <p class="base-font-size text-justify">
+                                        <p class="base-font-size">
                                             Please choose a sponsorship level that suits your budget and goals. We
                                             appreciate any amount you can give. Thank you for supporting the Misfits
                                             Basketball Club!
