--- a/sponsor.html
+++ b/sponsor.html
@@ -113,7 +113,7 @@
                         <div class="box-dark box-shadow border border-color-pink p-5 bg-black">
                             <div class="row align-items-center">
                                 <div class="col-12 col-lg-12 mr-lg-auto">
-                                    <div class="text-center text-lg-left text-facebook-dark2">
+                                    <div class="text-left text-lg-left text-facebook-dark2">
                                         <h2 class="xxl-font-size font-weight__400 text-misfit-blue">
                                             Sponsor the Misfits
                                         </h2>
