--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                             <div class="col-12 col-lg-12 mx-lg-auto">
                                 <div class="p-lg-10 text-center text-misfit-blue">
                                     <h3 class="text-primary base-font-size"></h3>
-                                    <h2 class="xxl-font-size font-weight__500">
+                                    <h2 class="text-left xxl-font-size font-weight__500">
                                         Our Supporters
                                     </h2>
                             
